# plaud-linux

./: README.es.md  README.md  README.pt-BR.md  cli.py  generate_icons.py  install.sh  main.py  pyproject.toml  recorder.py  requirements.txt  test_upload.py  tray.py
desktop/: plaud-linux-autostart.desktop  plaud-linux.desktop
plaud_linux/: __init__.py  cli.py  tray.py  uploader.py
