[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaud-linux"
version = "0.1.0"
description = "Open-source alternative to Plaud Desktop for Linux. Record audio and auto-upload to web.plaud.ai."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andre Dantas"}
]
keywords = ["plaud", "audio", "recorder", "linux", "rpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "playwright",
]

[project.scripts]
plaud-linux = "plaud_linux:main"

[project.urls]
Homepage = "https://github.com/andrefrd/plaud-linux"
